First steps with Typescript: Exercises 9.4.-9.5.

--- a/Calculators/package.json
+++ b/Calculators/package.json
@@ -4,6 +4,7 @@
   "description": "---",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev index.ts",
     "ts-node": "ts-node",
     "calculateBmi": "ts-node -- calculateBmi",
     "exerciseCalculator": "ts-node -- exerciseCalculator"
@@ -11,8 +12,13 @@
   "author": "Ilyas Ndhote",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.6",
     "@types/node": "^13.13.5",
     "ts-node": "^8.10.1",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
